2006-08-02 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j103-UNSTABLE

 * Fix: JS warning in ImageMap when no ImageMap is available.
   Thanks to StephaneT from forums.

 * Fix in view_photo.

 * Little CSS changes in jenskin.

2006-07-29 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j102-UNSTABLE

 * Fix: HTML ans JS Fixes in slideshow.

 * Show only skins with a .default file in config wizard
   (Will be reverted when all skins are 1.6 compliant)

 * Some indenting.
 
2006-07-29 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j101-UNSTABLE

 * Jenskin -> 1.6

2006-07-27 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j100-UNSTABLE

 * Black skin -> 1.6

 * Fix: recognize .default files for available skins

2006-07-25 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j99-UNSTABLE

 * Change: Remove param $size in gInput(), now handled via $attrs

 * Changed some " to '

 * Little layout fix in popups/edit_appearance.php

2006-07-24 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j98-UNSTABLE

 * Adjust bars002 skin -> 1.6

 * Little layot changes in templates.
 
2006-07-24 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j97-UNSTABLE

 * Switched rows and columns in album properties.

 * CHANGE: Removed Support for:  $_SERVER['HTTP_HOST'] in css files 

2006-07-24 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j96-UNSTABLE

 * Fix: ZLORIFX == vs. ===, using strcmp() now in drawselect.

2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j95-UNSTABLE

 ***** CHANGE *****
 
 Removed following skins:
	bblue
	bgreen
	bgreen2
	bluemod
	bpurple
	greenpurple
	paint
	redmarble

2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j94-UNSTABLE

 ***** NEW ******

 * Mainpage is now themeable.
 
2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j93-UNSTABLE

 * Hide RandomBlock Source in setup as its currently unused.

 * CSS things in Setup.

 * Make some Texts tranlateable

 * Some layout and wording things.

2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j92-UNSTABLE

 * Fix: Popup for frames didnt work in frames for randomblock.
