@@ -386,7 +386,6 @@ table.g-albums-table .g-albumdesc-cell {
 
 .YUIsearchshadow {
     position: absolute;
-    width: 75%;
     margin: .3em;
     z-index: 5;
     background: #a0a0a0;
